# oldp-toolkit

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/oldp_toolkit/: __init__.py  cli.py
src/oldp_toolkit/commands/: __init__.py  base.py  convert_dump_to_hf.py
tests/: __init__.py  test_base_command.py  test_cli.py  test_convert_dump_to_hf.py
tests/fixtures/dumps/: references.100.csv
